<resources>
    <string name="app_name">Home Meal App</string>
    <string name="getStarted_ButtonLabel">Get started</string>
    <string name="welcome_Textview">Your one stop destination to order, sell, and/or deliver home-cooked meals.</string>
    <string name="appLogo_ImageViewAltText">app logo</string>
    <string name="usertype_TextView">WHO ARE YOU?</string>
    <string name="customer_ButtonLabel">A Customer</string>
    <string name="houseCook_ButtonLabel">A House Cook</string>
    <string name="deliveryGuy_ButtonLabel">A Delivery Guy</string>
    <string name="login_ButtonLabel">Login</string>
    <string name="email_EditTextHint">Email</string>
    <string name="forgotPassword_TextView">forgot password?</string>
    <string name="password_editTextHint">Password</string>
    <string name="noAccount_TextView">Don\'t have and account? Sign up.</string>
    <string name="loginWelcome_TextView">Login with an existing account</string>
    <string name="chefSignupWelcome_Textview">Register as a Home Cook</string>
    <string name="phoneNumberHint_TextView">Enter your valid 11 digit phone number</string>
    <string name="addressHint_Textview">Your orders will get picked up from this address</string>
    <string name="passwordHint_TextView">Password must be 8 characters long</string>
    <string name="signup_ButtonLabel">Sign up</string>
    <string name="phoneCode_Text">+880 </string>
    <string name="address_EditTextHint">Home Address</string>
    <string name="confirmPassword_EditTextHint">Confirm Password</string>
    <string name="addButton_label">add</string>
    <string name="foodItemsEmpty_TextView">No food items listed yet.</string>
    <string name="servicePayment_TextView">Service Charge Payment</string>
    <string name="servicePaymentSubtitle_Textview">Pay service fee for successful orders</string>
    <string name="placedOrders_TextView">Placed Orders</string>
    <string name="placedOrderSubtitle_TextView">view list of placed orders by customers</string>
    <string name="updateProfile_TextView">Update Profile</string>
    <string name="updateProfileUSubtitle_TextView">update provided personal information</string>
    <string name="settings_TextView">Settings</string>
    <string name="settingsSubtitle_TextView">modify default app behaviour</string>
    <string name="logout_TextView">Logout</string>
    <string name="logoutSubtitle_TextView">logout from this chef user account</string>
    <string name="payment_icon_Alt">payment</string>
    <string name="placeOrder_icon_Alt">placed-orders</string>
    <string name="profile_icon_Alt">profile-icon</string>
    <string name="settings_icon_Alt">settings-icon</string>
    <string name="logout_icon_Alt">logour-icon</string>
    <string name="menu_title">Menu</string>
    <string name="payment_Textview">Payment Amount: </string>
    <string name="paymentAmount_TextView">8.00 BDT</string>
    <string name="paymentHint_TextView">7% of the payments you received</string>
    <string name="companyBkash_TextView">Company Bkash: </string>
    <string name="companyBkashNumber">+880 12345678910</string>
    <string name="companyBkashHint_TextView">bkash the service charge to this number</string>
    <string name="paymentProcess_TextView">Please bkash the payment amount to the given phone number. After you are done, put the bKash transaction code below.</string>
    <string name="transactionCodeHint_Textview">enter valid bKash 10 letter transaction code</string>
    <string name="confirmPayment_ButtonLabel">Confirm Payment</string>
    <string name="service_charge_payment_title">Service Charge Payment</string>
    <string name="transactionCode_hint">transaction code</string>
    <string name="addPhoto_Alt">Add Photo</string>
    <string name="foodName_EditTextHint">food name</string>
    <string name="foodNameExplanation_TextView">make the name clear and understandable</string>
    <string name="price_EditTextHint">price (TK)</string>
    <string name="priceExplanation_TextView">price per unit quantity</string>
    <string name="descriptionLabel_TextView">Description</string>
    <string name="description_EditTextHint">brief description of maximun 50 words</string>
    <string name="itemsLabel_TextView">Items</string>
    <string name="items_EditTextHint">ingredients of the food separated by comma</string>
    <string name="tags_EditTextHint">tags separated by comma(eg. veggie, snacks)</string>
    <string name="quantityLabel_TextView">Quantity</string>
    <string name="quantity_EditTextHint">quantity per unit of order</string>
    <string name="offerFood_ButtonLabel">Offer Food</string>
    <string name="tagsLabel_TextView">Tags</string>
    <string name="addFoodOffer_title">Add food offering</string>
    <string name="foodItemNotConfirmed_ButtonLabel">Not Confirmed</string>
    <string name="foodItemConfirmed_ButtonLabel">Confirmed</string>
    <string name="foodName_listItem_TextView">Food Name</string>
    <string name="price_listItem_TextView">100 TK</string>
    <string name="quantity_listItem_TextView">quantity specified by vendor</string>
    <string name="tag_listItem_TextView">Tag1, Tag2</string>
    <string name="createVariant_button_Alt">create-variant</string>
    <string name="delete_button_Alt">delete-icon</string>
    <string name="quantity_orders_TextView">1 X (amount specified/unit)</string>
    <string name="address_placeHolder">provided, full, Address</string>
    <string name="phone_placeHolder">+880 12345678910</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="create_variant_title">Create a Variant</string>
    <string name="update_profile_title">Update Profile</string>
    <string name="noPlacedOrders_TextView">No orders found.</string>
    <string name="placed_orders_title">Placed Orders</string>
    <string name="customerSignupWelcome_Textview">Register as a customer</string>
    <string name="noFoodOffersFound_TextView">No food offers found.</string>
    <string name="searchFilters_TextView">Search filters:</string>
    <string name="searchFilterTags_TextViewPlaceHolder">Tag1, Tag2</string>
    <string name="close_icon_Alt">close</string>
    <string name="monthlyPlan_icon_Alt">schedule-icon</string>
    <string name="monthlyPlan_TextView">Monthly Meal Plan</string>
    <string name="monthlyPlanSubtitle_Textview">feature coming soon</string>
    <string name="customerMenuPlacedOrderSubtitle_TextView">view list of your placed orders</string>
    <string name="customerPlaceOrderTitle_TextView">Place your order for Food Name</string>
    <string name="quantityHint_TextView">1 unit = (quantity specified by vendor)</string>
    <string name="bKashPhoneHint_customerPlaceOrder_TextView">Bkash payment phone number</string>
    <string name="callPhoneHint_customerPlaceOrder_TextView">Phone number for delivery guy to contact you</string>
    <string name="address_customerPlaceOrder_EditTextHint">full address of your current location</string>
    <string name="addressHint_customerPlaceOrder_TextView">Press the location icon to detect your current location</string>
    <string name="placeOrder_ButtonLabel">Proceed to Order</string>
    <string name="customer_place_order_title">Place Order</string>
    <string name="minus_icon_Alt">minus_icon</string>
    <string name="customer_foodOfferSeeMore_listItem_ButtonLabel">See more</string>
    <string name="customer_payNow_orders_ButtonLabel">Pay now</string>
    <string name="save">Save</string>
    <string name="customer_paymentHint_TextView">excluding any bKash transaction fee</string>
    <string name="vendorBkash_TextView">Vendor bKash</string>
    <string name="vendorBkashHint_TextView">bKash the payment money to this number</string>
    <string name="confirmOrder_ButtonLabel">Confirm Order</string>
    <string name="meal_details">Meal Details</string>
    <string name="registration_error">Authentication Failed! Check your internet and/or provided email</string>
    <string name="email_input_error">invalid email</string>
    <string name="phone_input_error">invalid phone (must include +880)</string>
    <string name="address_input_error">invalid address</string>
    <string name="password_input_error">invalid password</string>
    <string name="confirm_password_error">passwords dont match</string>
    <string name="signup_button_label_signing_up">Signing up…</string>
    <string name="login_button_label_logging_in">Logging In…</string>
    <string name="login_failed">No such user exists</string>
    <string name="login_attempt_failed">An unexpected error occurred! please check your internet</string>
    <string name="hard_logout">Sorry, you need to login again!</string>
    <string name="loading">Loading…</string>
    <string name="data_load_error">An unexpected error occurred!</string>
    <string name="saved">Saved!</string>
    <string name="an_unexpected_error_occurred">An unexpected error occurred</string>
    <string name="image_upload_failed">Image upload failed!</string>
    <string name="food_name_error">invalid food name</string>
    <string name="food_price_error">invalid price</string>
    <string name="food_description_error">invalid food description</string>
    <string name="food_items_error">inavlid items</string>
    <string name="food_tags_error">invalid tags</string>
    <string name="food_quantity_error">invalid quantity</string>
    <string name="add_food_photo_please">Add photo of the food please</string>
    <string name="food_offer_save_failed">Failed to save food offer! please try again</string>
    <string name="saving">Saving…</string>
    <string name="spinner_item_TextView">region option</string>
    <string name="chefSignup_PhoneNumber_EditText_hint">(+880) phone number</string>
    <string name="no_region_selected">select a region please!</string>
    <string name="failed_to_delete_food_offer">Failed to delete food offer!</string>
    <string name="customerSignUpEmailHint_TextView">Must use different email than your chef account (if any)</string>
    <string name="chefSignup_emailHintTextView">Must be different than your customer account (if any)</string>
    <string name="customer_food_details_contact_button_label">Contact Vendor</string>
    <string name="contacting">Contacting…</string>
    <string name="failed_to_contact">Failed to contact vendor!</string>
    <string name="placing_order">Placing Order…</string>
    <string name="order_placed">Order Placed</string>
    <string name="default_order_quantity">1</string>
    <string name="call_failed">Failed to dial number</string>
    <string name="failed_to_accept_order">Failed to accept order!</string>
    <string name="failed_to_reject_order">Failed to reject order!</string>
    <string name="invalid_transaction_code">must be 10 letter alphanumeric</string>
    <string name="confirming">confirming…</string>
    <string name="payment_complete">payment complete!</string>
    <string name="payment_failed">Payment Failed!</string>
    <string name="authenticating">Authenticating user please wait.</string>
    <string name="bg_notification_explanation">App notifications on the background</string>
    <string-array name="regions_array">
        <item>Mirpur</item>
        <item>Uttora</item>
        <item>Bashundhara R/A</item>
        <item>Badda</item>
    </string-array>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>