<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:elevation="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customer_foodName_listItem_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodName_listItem_TextView"
                android:textColor="@color/theme_dark_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/customer_location_listItem_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_location"
                android:text="@string/address_placeHolder"
                android:textColor="@color/theme_dark_color"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/customer_price_listItem_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/price_listItem_TextView"
            android:textColor="@color/theme_dark_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/customer_foodImage_listItem_ImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/addPhoto_Alt"
        app:srcCompat="@drawable/ic_add_photo" />

    <TextView
        android:id="@+id/customer_quantity_listItem_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/quantity_listItem_TextView"
        android:textColor="@color/theme_dark_color" />

    <TextView
        android:id="@+id/customer_tags_listItem_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/tag_listItem_TextView"
        android:textColor="@color/theme_dark_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/customer_foodOfferSeeMore_listItem_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/customer_foodOfferSeeMore_listItem_ButtonLabel"
        android:textAllCaps="false"
        app:iconPadding="4dp" />
</LinearLayout>