<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/custom_item_view_bg"
    android:elevation="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chef_foodName_listItem_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodName_listItem_TextView"
                android:textColor="@color/theme_dark_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chef_price_listItem_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_listItem_TextView"
                android:textColor="@color/theme_dark_color"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/chef_createVariant_ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="5"
            android:background="#ffffff"
            android:contentDescription="@string/createVariant_button_Alt"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_action_food_variant" />

        <ImageButton
            android:id="@+id/chef_deleteFoodItem_ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="5"
            android:background="#ffffff"
            android:contentDescription="@string/delete_button_Alt"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_action_delete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/chef_foodImage_listItem_ImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:contentDescription="@string/addPhoto_Alt"
        android:foregroundGravity="bottom"
        app:srcCompat="@drawable/ic_add_photo" />

    <TextView
        android:id="@+id/chef_quantity_listItem_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/quantity_listItem_TextView"
        android:textColor="@color/theme_dark_color" />

    <TextView
        android:id="@+id/chef_tag_listItem_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/tag_listItem_TextView"
        android:textColor="@color/theme_dark_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/chef_foodOfferConfirmation_listItem_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/ic_action_x"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/foodItemNotConfirmed_ButtonLabel"
        android:textAllCaps="false"
        app:iconPadding="4dp" />
</LinearLayout>