<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/foodName_orders_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:padding="4dp"
            android:text="@string/foodName_listItem_TextView"
            android:textColor="@color/theme_dark_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodPrice_orders_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="right"
            android:padding="4dp"
            android:text="@string/price_listItem_TextView"
            android:textColor="@color/theme_dark_color"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/quantity_orders_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:text="@string/quantity_orders_TextView"
        android:textColor="@color/theme_dark_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/orderLocation_orders_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="2dp"
        android:text="@string/address_placeHolder"
        android:textColor="@color/theme_dark_color"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_action_location" />

    <TextView
        android:id="@+id/orderPhone_orders_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/phone_placeHolder"
        android:textColor="@color/theme_dark_color"
        app:drawableLeftCompat="@drawable/ic_action_call" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rejectOrder_orders_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_x"
            android:gravity="center"
            android:text="@string/reject"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/acceptOrder_orders_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_check"
            android:gravity="center"
            android:text="@string/accept"
            app:iconPadding="0dp" />
    </LinearLayout>
</LinearLayout>