<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".commonActivities.UserTypeChoiceActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userType_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/usertype_TextView"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/customerUserButton"
            android:layout_width="200dp"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:drawableLeft="@drawable/ic_customer_icon"
            android:onClick="customerUserClick"
            android:text="@string/customer_ButtonLabel" />

        <Button
            android:id="@+id/houseCookUserButton"
            android:layout_width="200dp"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:drawableLeft="@drawable/ic_cook_icon"
            android:onClick="chefUserClick"
            android:text="@string/houseCook_ButtonLabel" />

        <Button
            android:id="@+id/deliveryGuyUserButton"
            android:layout_width="200dp"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:drawableLeft="@drawable/ic_rider_icon"
            android:onClick="deliveryUserClick"
            android:text="@string/deliveryGuy_ButtonLabel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>